<resources>
    <string name="app_name">FatCarbon</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Log in</string>
    <string name="no_account">No account yet?</string>
    <string name="pl_enter_uname">Please enter username</string>
    <string name="pl_enter_password">Enter a valid password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_hint">Password must be minimum of 12 characters, contain at least one uppercase letter, one lowercase letter, one number, and one special character</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="submit">Submit</string>
    <string name="activity_level">Activity level</string>
    <string name="female">Female</string>
    <string name="weight">Weight [kg]</string>
    <string name="male">Male</string>
    <string name="height">Height [cm]</string>
    <string name="already_an_acc">Already have an account?</string>
    <string name="age">Age</string>
    <string name="title_activity_main_logged_in">MainActivityLoggedIn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FatCarbon</string>
    <string name="nav_header_subtitle">info@aarnela.fi</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_weight_diary">Weight diary</string>
    <string name="menu_foods_diary">Food diary</string>
    <string name="menu_activity_diary">Activity diary</string>
    <string name="user_exists">User already exists</string>
    <string name="signup_error_snackbar_msg">The username or password not valid!\nTry again!</string>
    <string name="user_not_exist">The user does not exist</string>
    <string name="today">Today</string>
    <string name="search_keyword">Add food items</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="add_weighting">Add weight [kg]</string>
    <string name="weight_now">Weight now</string>
    <string name="start">Start</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="end">End</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="time_picker_format">%1$d:%2$d</string>
    <string name="calories_eaten_today">Calories eaten today:</string>
    <string name="calories_burnt_today">Extra calories burnt today</string>
    <string name="weight_today">Today\'s weight</string>
    <string name="weight_toGo">to target</string>
    <string name="settings">Settings</string>
    <string name="old_passwd">Old password</string>
    <string name="new_passwd">New password</string>
    <string name="repeat_pwd">Repeat new password</string>
    <string name="save">Save changes</string>
    <string name="change_pwd">Change password</string>
    <string name="set_target_weight">Set target weight</string>
    <string name="set_act_level">Set activity level</string>
    <string name="menu_settings">Settings</string>
    <string name="pwd_wrong">Wrong password</string>
    <string name="pwd_not_match">Passwords do not match</string>
    <string name="fill_all_values">Fill all values</string>
    <string name="sex_must_selected">Sex must be selected</string>
    <string name="password_changed">Your password is changed</string>
    <string name="settings_saved">Settings are now saved</string>
    <string name="food_to_search">Search for food</string>
    <string-array name="mets">
        <item>Select Activity</item>
        <item>Light work</item>
        <item>Relaxed walk</item>
        <item>Walking 6 km/h</item>
        <item>Fast walking >6km/h</item>
        <item>Gym</item>
        <item>Dancing</item>
        <item>Heavy work</item>
        <item>Heavy workout</item>
        <item>Slow running 8 km/h</item>
        <item>Extreme work</item>
        <item>Running 10 km/h</item>
        <item>Cycling 27–30 km/h</item>
        <item>Skiing 14–18 km/h</item>
        <item>Fast running 15 km/h</item>
        <item>Fast cycling > 30 km/h</item>
        <item>Long term endurance sports</item>
    </string-array>
</resources>