<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fatcarbon.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_weights"
        android:name="com.example.fatcarbon.ui.weights.WeightsFragment"
        android:label="@string/menu_weight_diary"
        tools:layout="@layout/fragment_weights" />

    <fragment
        android:id="@+id/nav_foods"
        android:name="com.example.fatcarbon.ui.foods.FoodsFragment"
        android:label="@string/menu_foods_diary"
        tools:layout="@layout/fragment_foods" />

    <fragment
        android:id="@+id/nav_activity"
        android:name="com.example.fatcarbon.ui.activity.ActivityFragment"
        android:label="@string/menu_activity_diary"
        tools:layout="@layout/fragment_activity" />
</navigation>