<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="@string/set_target_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/buttonChangePwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRepeat" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/set_act_level"
        app:layout_constraintStart_toStartOf="@+id/editTextSetTargetWeight"
        app:layout_constraintTop_toBottomOf="@+id/editTextSetTargetWeight" />

    <EditText
        android:id="@+id/editTextSetTargetWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editTextPasswordOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/old_passwd"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <EditText
        android:id="@+id/editTextPasswordNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/new_passwd"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordOld"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordOld" />

    <EditText
        android:id="@+id/editTextPasswordRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/repeat_pwd"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordNew"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordNew" />

    <SeekBar
        android:id="@+id/seekBarSetActLevel"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="211dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:max="4"
        android:progress="2"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/settings"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangePwd" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_pwd"
        app:layout_constraintStart_toStartOf="@+id/seekBarSetActLevel"
        app:layout_constraintTop_toBottomOf="@+id/seekBarSetActLevel" />

    <TextView
        android:id="@+id/textViewActLevelMeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarSetActLevel"
        app:layout_constraintTop_toTopOf="@+id/seekBarSetActLevel" />

</android.support.constraint.ConstraintLayout>