<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="259dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/today"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/text_home_date"
        android:layout_width="143dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/today"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="519dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:text="@string/calories_eaten_today"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCalEatenKcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="TextView"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textViewCalEatenPrcent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:text="TextView"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/textViewCalEatenKcal"
            app:layout_constraintTop_toTopOf="@+id/textViewCalEatenKcal" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/calories_burnt_today"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textViewCalEatenKcal" />

        <TextView
            android:id="@+id/textViewCalBurntKcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="TextView"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/weight_today"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textViewCalBurntKcal" />

        <TextView
            android:id="@+id/textViewCurrentWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="TextView"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/textView24"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <TextView
            android:id="@+id/textViewWeightToTarget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:text="TextView"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/textViewCurrentWeight"
            app:layout_constraintTop_toTopOf="@+id/textViewCurrentWeight" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_toGo"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textViewWeightToTarget"
            app:layout_constraintTop_toTopOf="@+id/textView24" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>